--- a/css/style.css
+++ b/css/style.css
@@ -113,7 +113,7 @@ img:hover {
 
 /* home section */
 #home {
-  background: url('../images/about-img.jpg')no-repeat;
+  background: url('../images/portfolio-img1.jpg')no-repeat;
   background-size: cover;
   background-position: center;
   min-height: 600px;
